fixing modal on iphone

--- a/PredictionUI/Views/Client/Layout/css/style.css
+++ b/PredictionUI/Views/Client/Layout/css/style.css
@@ -636,14 +636,14 @@ option , select{
     }
 
     .modal-dialog {
-        z-index: 999999!important;
+        /*z-index: 999999!important;*/
     }
     .modal-content {
-        z-index: 999999!important;
+        /*z-index: 999999!important;*/
     }
 
     .modal {
-        z-index: 9999!important;
+        /*z-index: 9999!important;*/
     }
 
 
